Work on courseware style

--- a/static/less/global/modal.less
+++ b/static/less/global/modal.less
@@ -10,6 +10,10 @@
         .ionisx-container-modal();
         .ionisx-video-modal();
     }
+
+    button.dismiss:not(.close-modal) {
+        .ionisx-btn(@white, @gg-alt-blue);
+    }
 }
 
 #forgot-password-modal {
