--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -2,9 +2,12 @@
 // Colors                                                             //
 ////////////////////////////////////////////////////////////////////////
 
+@white: chartreuse;
 @white: #fff;
+@black: deeppink;
 @black: lighten(#000, 8%);
 
+@gg-blue: orange;
 @gg-blue: #3ea5ce;
 @gg-grey: #eef0f1;
 @gg-alt-blue: #0f70b7;
@@ -14,6 +17,7 @@
 @gg-orange: #f39c12;
 
 @gg-disabled-grey: #bdc3c7;
+@gg-border-grey: dodgerblue;
 @gg-border-grey: #ddd;
 
 @hr-border: @gg-border-grey;
