--- a/templates/static_templates/theme-contact.html
+++ b/templates/static_templates/theme-contact.html
@@ -9,10 +9,9 @@
   <hr class="horizontal-divider">
 
   <div class="inner-wrapper">
-    <article id="ionis-online-courses-contact">
+    <article>
       <p>
-        Vous pouvez nous contacter par email à l’adresse :
-        <a href="mailto:digital.learning@ionis-group.com">digital.learning@ionis-group.com</a>.
+        Pour nous contacter, rendez-vous sur <a href="https://ionisx.com/contact">notre formulaire de contact</a>.
       </p>
     </article>
   </div>
