--- a/static/less/pages/course/courseware.less
+++ b/static/less/pages/course/courseware.less
@@ -174,6 +174,7 @@
                             background: none;
                             border: 0 none;
                             box-shadow: none;
+                            color: @white;
                             border-top: 3px solid @gg-border-grey;
                             border-bottom: 3px solid @gg-border-grey;
 
