Change capa buttons style

--- a/static/less/pages/course/xblock.less
+++ b/static/less/pages/course/xblock.less
@@ -68,4 +68,18 @@
             }
         }
     }
+
+    &.xmodule_CapaModule {
+        button, input[type=button] {
+            .ionisx-btn(@white, @gg-alt-blue);
+
+            font-size: 0.9em;
+            display: inline !important;
+
+            span {
+                font: inherit;
+                color: inherit;
+            }
+        }
+    }
 }
