Change courseware padding

--- a/static/less/pages/course/courseware.less
+++ b/static/less/pages/course/courseware.less
@@ -57,7 +57,7 @@
                     font-weight: 500;
                     background: none;
                     background-color: @white;
-                    padding: 1.5em 1em;
+                    padding: 1em;
 
                     li {
                         margin: 0 0 0.8em 0;
