--- a/static/less/pages/course/xblock.less
+++ b/static/less/pages/course/xblock.less
@@ -81,5 +81,10 @@
                 color: inherit;
             }
         }
+
+        .submission_feedback {
+            font: inherit;
+            color: @gg-disabled-grey;
+        }
     }
 }
