--- a/static/less/mixins/button.less
+++ b/static/less/mixins/button.less
@@ -37,3 +37,9 @@
         border-color: @fg-color;
     }
 }
+
+.ionisx-btn-disabled(@fg-color: @gg-disabled-grey) {
+    .ionisx-btn(@fg-color, @white);
+
+    cursor: default;
+}
