Style empty dashboard

--- a/static/less/pages/dashboard.less
+++ b/static/less/pages/dashboard.less
@@ -98,6 +98,23 @@
             }
         }
 
+        .empty-dashboard-message {
+            margin: 0;
+            padding: 0;
+            text-align: left;
+
+            > p {
+                font: inherit;
+                color: inherit;
+            }
+
+            > a {
+                .ionisx-btn(@white, @gg-emerald);
+
+                font-size: 0.9em;
+            }
+        }
+
         .listing-courses .course-item {
             border: 0 none;
             padding: 0;
