Fix size of course about buttons

--- a/static/less/pages/course/about.less
+++ b/static/less/pages/course/about.less
@@ -113,6 +113,7 @@ section.course-info {
 
                             strong, &.register, &.add-to-cart {
                                 .ionisx-btn(@white, @gg-alt-blue);
+                                .size(49%, auto);
                             }
 
                             &.register, &.add-to-cart, span.register.disabled.private, span.add-to-cart {
@@ -121,8 +122,9 @@ section.course-info {
 
                             span.register.disabled, span.add-to-cart {
                                 .ionisx-btn-disabled();
+                                .size(49%, auto);
 
-                                margin: 0 20px 0 0;
+                                margin: 0 2% 0 0;
                             }
 
                             span.register.disabled.private {
