--- a/static/less/global/header.less
+++ b/static/less/global/header.less
@@ -24,6 +24,7 @@ header.global, header.global.slim {
         h1.logo {
             margin: 0 30px 0 0;
             padding: 0;
+            float: left;
 
             &:before {
                 display: none;
