--- a/static/less/mixins/alert.less
+++ b/static/less/mixins/alert.less
@@ -14,6 +14,8 @@
         margin: 0;
         font: inherit;
         font-weight: 300;
+        list-style: inherit;
+        list-style-position: inside;
     }
 
     &.submission-error {
