--- a/static/less/pages/main.less
+++ b/static/less/pages/main.less
@@ -64,6 +64,7 @@ body,
 
     @import 'register.less';
     @import 'login.less';
+    @import 'password-reset.less';
 
     @import 'course/main.less';
 }
