--- a/static/less/pages/static.less
+++ b/static/less/pages/static.less
@@ -2,4 +2,15 @@
     .ionisx-container();
 
     margin-top: @layout-top-spacing;
+
+    .inner-wrapper {
+        .square(auto);
+    }
+
+    ol, ul {
+        li {
+            font: inherit;
+            color: inherit;
+        }
+    }
 }
