--- a/static/less/pages/course/wiki.less
+++ b/static/less/pages/course/wiki.less
@@ -1,5 +1,16 @@
-.wiki-wrapper {
-    * {
+> .wiki-wrapper {
+    padding: 0;
+
+    header {
         box-sizing: content-box;
+    }
+
+    .article-functions {
+        ul.nav {
+            li {
+                float: none;
+                margin-bottom: 0;
+            }
+        }
     }
 }
